<?xml version="1.0" encoding="utf-8"?>
<!--
    Designed and developed by 2022 skydoves (Jaewoong Eum)

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:bind="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools">

  <data>

    <variable
      name="pokemon"
      type="com.skydoves.pokedex.core.model.Pokemon" />

    <variable
      name="vm"
      type="com.skydoves.pokedex.ui.details.DetailViewModel" />
  </data>

  <androidx.core.widget.NestedScrollView
    android:id="@+id/nestedScroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_marginBottom="32dp"
      android:descendantFocusability="blocksDescendants">

      <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="12dp"
        android:paddingTop="12dp"
        android:paddingEnd="6dp"
        android:translationZ="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/header"
        app:onBackPressed="@{true}"
        app:srcCompat="@drawable/ic_arrow" />

      <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/app_name"
        style="@style/TextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:translationZ="100dp"
        app:layout_constraintStart_toEndOf="@id/arrow"
        app:layout_constraintTop_toTopOf="@id/arrow" />

      <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/index"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:layout_marginStart="12dp"
        android:text="@{vm.pokemonInfo.idString}"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:translationZ="100dp"
        app:layout_constraintEnd_toEndOf="@id/header"
        app:layout_constraintTop_toTopOf="@id/header"
        tools:text="#001" />

      <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="36dp"
        android:text="@{pokemon.name()}"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:textColor="@color/white"
        android:textSize="36sp"
        android:textStyle="bold"
        android:translationZ="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header"
        tools:text="skydoves" />

      <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:background="@color/colorPrimary"
        android:elevation="9dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.CardView" />

      <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image"
        android:layout_width="190dp"
        android:layout_height="190dp"
        android:layout_marginBottom="20dp"
        android:scaleType="center"
        android:translationZ="100dp"
        app:layout_constraintBottom_toBottomOf="@id/header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:paletteImage="@{pokemon.imageUrl}"
        app:paletteView="@{header}"
        app:toast="@{vm.toastMessage}" />

      <com.skydoves.androidribbon.RibbonRecyclerView
        android:id="@+id/ribbonRecyclerView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:bindPokemonTypes="@{vm.pokemonInfo.types}"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name"
        app:ribbon_recycler_orientation="horizontal" />

      <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:gone="@{!vm.loading}"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="gone" />

      <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/weight"
        style="@style/TextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@{vm.pokemonInfo.weightString}"
        android:textSize="21sp"
        app:layout_constraintEnd_toStartOf="@id/height"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ribbonRecyclerView"
        tools:text="24.0 KG" />

      <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/height"
        style="@style/TextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@{vm.pokemonInfo.heightString}"
        android:textSize="21sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/weight"
        app:layout_constraintTop_toTopOf="@id/weight"
        tools:text="11 M" />

      <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/weight_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weight"
        android:textColor="@color/white_56"
        app:layout_constraintEnd_toStartOf="@id/height"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/weight"
        tools:text="Weight" />

      <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/height_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/height"
        android:textColor="@color/white_56"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/weight"
        app:layout_constraintTop_toBottomOf="@id/height" />

      <androidx.constraintlayout.widget.Barrier
        android:id="@+id/stats_top_barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="weight_title,height_title" />

      <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/stats_constraint_layout"
        android:layout_width="match_parent"
        android:layout_height='wrap_content'
        app:layout_constraintTop_toBottomOf="@id/stats_top_barrier"
        app:layout_constraintStart_toStartOf="@id/stats_top_barrier">
        <include android:id="@+id/stats_layout"
          layout="@layout/stats_layout"
          bind:statsInfo="@{vm}"
          >
        </include>
      </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
  </androidx.core.widget.NestedScrollView>

</layout>